--- a/front/src/App.css
+++ b/front/src/App.css
@@ -3,6 +3,12 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+}
+
+.selected {
+  background-color: #555 !important;
+  filter: drop-shadow(0 0 2em #555);
 }
 
 .App {
@@ -10,6 +16,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 2em;
 }
 
 .App-header {
@@ -20,6 +27,12 @@
   color: white;
   padding: 20px;
   width: 60vw;
+}
+
+.houses-filter {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
 }
 
 .App-logo {
@@ -33,13 +46,17 @@
 
 .App-body {
   display: flex;
+  min-width: 1280px;
+  flex: 1;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  overflow-y: scroll;
 }
 
 .card {
   width: 200px;
+  height: 120px;
   padding: 2em;
   margin: 1em;
   border-radius: 0.5em;
@@ -73,6 +90,10 @@
 }
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4em;
   width: 150px;
   padding: 0.5em 1em;
   border: none;
