--- a/front/src/index.css
+++ b/front/src/index.css
@@ -26,7 +26,8 @@ body {
   margin: 0;
   display: flex;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
+  overflow-y: hidden;
 }
 
 h1 {
