--- a/front/src/App.css
+++ b/front/src/App.css
@@ -46,12 +46,10 @@
 
 .App-body {
   display: flex;
-  min-width: 1280px;
   flex: 1;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  overflow-y: scroll;
 }
 
 .card {
@@ -113,4 +111,17 @@
 
 .button:focus {
   outline: none;
+}
+
+.pages {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  user-select: none;
+}
+
+.pages > svg {
+  cursor: pointer;
 }
