Cards container style modification: size adjustment and card center

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -48,10 +48,11 @@
 
 .App-body {
   display: flex;
-  flex: 1;
+  height: 432px;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
 .card {
